# PROJECT_LUCID

./: .env.example  .gitignore  ACCOUNT_WIPE_DISCOVERY.md  AGENTS.md  B62_DEBUG_DISCOVERY.md  BETA_EXECUTION.md  CAPTURE_TOAST_DISCOVERY.md  CHANGELOG.md  CLAIM_RECOVERY_DISCOVERY.md  CLASSIFICATION_RECOVERY_DISCOVERY.md  CONTRADICTION_DISCOVERY.md  COUNT_SOURCE_DISCOVERY.md  DECIDE_UX_FIX_DISCOVERY.md  DECIDE_UX_V3_DISCOVERY.md  DECOMP_COMPLETENESS_DISCOVERY.md  DISCOVERY.md  EMBEDDING_RESTORE_DISCOVERY.md  ENTITY_LAYER_DISCOVERY.md  FAITHFUL_DECOMP_DISCOVERY.md  HANDOFF.md  INFRA_ISOLATION_DISCOVERY.md  INFRA_ISOLATION_MANUAL_SMOKE.md  LANDING_FIX_SPEC_DISCOVERY.md  LANGUAGE_BY_TYPE_DISCOVERY.md  LEGACY_RELABEL_DISCOVERY.md  LUCID_CONTEXT_PROMPT.md  M4A_DISCOVERY.md  MANUAL_SMOKE.md  MAPPINGS_SYNC_DISCOVERY.md  MASTER_HANDOFF.md  MEASUREMENT_COMPLETENESS_DISCOVERY.md  MEASUREMENT_DISCOVERY.md  NEGATION_POLICY_DISCOVERY.md  README.md  SELECTION_SAVE_DISCOVERY.md  SPO_NATLANG_DISCOVERY.md  SUBJECT_NATLANG_V2_DISCOVERY.md  SURFACE_GENERAL_DISCOVERY.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/api/: __init__.py  main.py
backend/api/capture/: __init__.py
backend/api/extractors/: __init__.py  base.py  dispatcher.py  highlighted_text.py  image.py  pdf.py  processor.py  video_stt.py  web_article.py  youtube_transcript.py  youtube_whisper.py
backend/api/mcp/: README.md  __init__.py  client.py  server.py
backend/api/metrics/: __init__.py  precision.py  understanding.py
backend/api/models/: __init__.py  applications.py  assistant.py  auth.py  base.py  canonical.py  contradiction.py  disambiguation.py  entities.py  facts.py  links.py  objects.py  predicates.py  recall.py  source.py  source_job.py  validate.py  validation.py
backend/api/ops/: __init__.py  (+7 more)
backend/core/: __init__.py
backend/models/: __init__.py
backend/scripts/: backfill_embeddings.py  backfill_entity_class.py  relabel_legacy_korean_entities.py  smoke_admin_area.py  wipe_account_knowledge.py
backend/tests/: __init__.py  mock_llm.py
(+568 files in other folders)
